# DES.sim

./: .gitignore  README.md  pyproject.toml  readme2.md
data/: outputstry_DES_data.csv
data/config/: logging_conf.json
data/inputs/: 2022_weather.csv  2025-04-07-Project1-weather.csv  2025-04-07-Project1-weather.xlsx  Input_2.csv  Input_kfw40.csv  Input_kfw55.csv  Input_kfw55_2.csv  Input_kfw55_2_el.csv  Input_profile2.csv  Input_profile3.csv  Load_profiles_desc.xlsx  Polysun.csv  Polysun.xlsx  Polysun_raw.CSV  data_gen.ipynb  data_generation.py  data_generation_2.py  energy_demand_kfw55.xlsx  energy_profile_kfw55.xlsx  input_params.json  npro.xlsx  npro_2025-02-21-Wohnungen.xlsx  npro_kfw55_2.xlsx  npro_profile2.xlsx  npro_profile3.xlsx  npro_project1_weather.xlsx  npro_weather_input.csv  sample_plan_300.csv  scenario.pkl  solar_data_HSO.csv
data/logs/: .gitignore
data/outputs/: .gitignore  ref_params.json  used_params.json
docs/: .$Controller logic.drawio.bkp  CHP_v2.md  Controller logic.drawio  EnergyTransformer.md  GasBoiler_v2.md  chp.md  controller.drawio  controller.md  gasboiler.md  index.md
docs/html/: chp_model.html  chp_mosaik.html  controller.html  controller_mosaik.html  genindex.html  index.html  main.html  search.html
iterative_optim/: run_batch.py  visu_batch.ipynb
iterative_optim/utils/: debug.csv
source/: index.rst
src/: PVlib_output.csv  README.txt  __init__.py  main.py  main_sim.py  profile_output
src/models/: 3wayvalve.py  EnTransformer.py  EnergyTransformer_frame.py  PVlib_output.csv  __init__.py  boiler_model_v2.py  chp_model.py  chp_model_v2.py  chp_mosaik.py  collector.py  controller.py  controller_mosaik.py  gasboiler_model.py  gasboiler_mosaik.py  pvlib_model.py
src/optimal_config/: all_configurations.csv  configurations.xlsx  greedy_maximin.ipynb  post_processing.py  run_opti.ipynb  run_opti.py  surrogate.ipynb  ~$configurations.xlsx
src/unit_testing/: __init__.py  pytest controller.py  pytest_controller.py
src/utils/: PVlib_output.csv  __init__.py  chp_fuel.ipynb  (+9 more)
validation/: input_params.json  main_sim.py  readme.md
(+7 files in other folders)
