[tool.setuptools]

[project]
name = "DES_sim"
authors = [{name = "Leroy Tomas", email = "leroy.tomas@hs-offenburg.de"}]
version = "1.0.1"
requires-python = "==3.10.13"
readme = "README.md"
keywords = ["DES", "mosaik", "simulation", "HP", "CHP", "PV"]

# add necessary dependencies of the repo. They can be installed via "pip install ."
dependencies = [
    "mosaik==3.2.0",
    "mosaik-api==3.0.3",
    "mosaik-api-v3==3.0.9",
    "mosaik-heatpump==1.0.1",
    "mosaik-pv==1.2.1",
    "mosaik-pvlib==1.0",
    "mosaik-csv",
    "pandas",
    "numpy",
    "pytest",
    "flake8",
    "matplotlib",
    "plotly==5.24.1",
    "nest_asyncio",
    "nbformat==5.10.4"

]


[project.optional-dependencies]
# add optional dependencies of the repo. They could be installed via "pip install .[dev]" 
dev = [
    "pytest",
]

opti = [
    "ipykernel",
    "ipynbname",
    "tqdm",
    "pyDOE"
]

# add optional dependencies of the repo. They could be installed via "pip install .[docs]" 
docs = [
    "sphinx==7.4.5",
    "sphinx-rtd-theme==2.0.0",
    "m2r2==0.3.3.post2",
]
